fixed about and blog 9

--- a/about/index.html
+++ b/about/index.html
@@ -29,8 +29,7 @@
             <img src=../images/dadWithGun.jpg alt="William Surmon holding machine gun"
                 longdesc="Image of William Surmon holding browning machine gun" width="384">
             <figcaption>
-                Placeholder photo of my father, William Surmon, while serving in the light horse regiment in the South
-                African border wars.
+                This is a picture of me at 19, when I had joined the Italian armed forces.
                 </br>
                 Credit: William Surmon. Private use.
             </figcaption>
@@ -39,32 +38,31 @@
 
         <h2>Early life and Career</h2>
         <p>
-            I am Giovanni Suzzi a 54 year old man, born and raised on the outskirts of Trieste in the Fruili-Venezia
-            Giula region. Born on the 24th of May 1966.
+            My name is Giovanni Suzzi, born and raised on the outskirts of Trieste in the Fruili-Venezia Giula region. I
+            was born on the 24th of May 1966 - I am 54.
         </p>
         <p>
-            At 18,I joined the Italian armed forces (Forze Armate Italine) in which I served for 4 years in the
-            infantry. I rose to the rank of Caporale maggiore (platoon leader) during this time.
+            Above, I have put an image of me, holding a Browning Machine gun shortly after joining the Italian armed
+            forces (Forze Armate Italine) in which I served for 4 years in the infantry. I rose to the rank of Caporale
+            maggiore (platoon leader) during this time
         </p>
         <p>
-            I had found out about better prospects in the southern african mercenary industry, giving me an opportunity
-            to uproot and move down to the South Africa during the later stages of the South African Border war. Shortly
-            after I joined as a mercenary, the company was dissolved due to the ending of the war in which they had been
-            primarily participating. This left me stranded halfway across the world with few meaningful contacts and the
-            small amount of money I had had in reserves.
+            I had discovered better prospects in the Southern African mercenary industry which gave me an opportunity to
+            uproot and move down to South Africa during the later stages of the South African Border war. Unfortunately,
+            shortly after I joined as a mercenary, the company was dissolved since the war in which they had been
+            primarily participating had ended. This left me stranded halfway across the world with few meaningful
+            contacts and only the small amount of money I had in reserves.
         </p>
         <p>
             During this time I met the love of my life, Kaybi, who helped me redirect and focus his life. And without
             her I would never have found my footing again.
         </p>
         <p>
-            I began exploring the various industries in South Africa, eventually
-            settling into the Computer Industry around 2000 (all thanks to Kaybi), where I have been ever since.
-            Primarily working
-            backend-developmental software engineering jobs. My military background helping me land jobs, from my
-            discipline allowing me to work harder than the average person, to incredible leadership skills. However,
-            my regimented mindset made it difficult to adapt to change on grand scales, this Kaybi has had to help a lot
-            with.
+            I began exploring the various industries in South Africa, eventually settling into the Computer Industry
+            around 2000 (all thanks to Kaybi). I have been there ever since. I primarily worked backend-developmental
+            software engineering jobs. My military background helped me land jobs, from my discipline allowing me to
+            work harder than the average person, to incredible leadership skills. However, my regimented mindset made it
+            difficult to adapt to change on grand scales, this Kaybi has had to help a lot with.
         </p>
         <p>
             Eventually I went on to produce my own software engineering company in the Summer of 2015(Suzzi Inc. Ltd.)
