fixed some stuff

--- a/about/index.html
+++ b/about/index.html
@@ -27,7 +27,7 @@
 
         <figure>
             <img src=../images/dadWithGun.jpg alt="William Surmon holding machine gun"
-                longdesc="Image of William Surmon holding browning machine gun" width="384">
+                longdesc="Image of William Surmon holding browning machine gun">
             <figcaption>
                 This is a picture of me at 19, when I had joined the Italian armed forces.
                 </br>
