--- a/construction/index.html
+++ b/construction/index.html
@@ -123,6 +123,13 @@
             scales accordingly to the relative width of the device it is being viewed on.
         </p>
         <img src=../images/IMG_20200603_0001.jpg alt="Logo">
+        <h3>
+            Blog dropdown
+        </h3>
+        <p>
+            To ease navigation to the latest blog posts, a dropdown menu was created to show the 6 latest blogposts.
+        </p>
+
     </main>
 
     <footer></footer>
