--- a/about/index.html
+++ b/about/index.html
@@ -44,7 +44,7 @@
         <p>
             Above, I have put an image of me, holding a Browning Machine gun shortly after joining the Italian armed
             forces (Forze Armate Italine) in which I served for 4 years in the infantry. I rose to the rank of Caporale
-            maggiore (platoon leader) during this time
+            maggiore (platoon leader) during this time.
         </p>
         <p>
             I had discovered better prospects in the Southern African mercenary industry which gave me an opportunity to
@@ -54,7 +54,7 @@
             contacts and only the small amount of money I had in reserves.
         </p>
         <p>
-            During this time I met the love of my life, Kaybi, who helped me redirect and focus his life. And without
+            During this time I met the love of my life, Kaybi, who helped me redirect and focus my life, without
             her I would never have found my footing again.
         </p>
         <p>
