Started Bootstrap integration

--- a/testBootstrap.html
+++ b/testBootstrap.html
@@ -2,10 +2,11 @@
 <html id="top">
 
 <head>
+
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
         integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-    <link href="/WSOA3028A_1830290/css/bootstrapStylesheet.css" rel="stylesheet">
-    <script src="../js/nav.js"></script>
+    <link href="css/bootstrapStylesheet.css" rel="stylesheet">
+    <script src="js/nav.js"></script>
     <meta charset="UTF-8">
     <meta name="desciption" content="Template">
     <meta name="author" content="Claudio Surmon">
@@ -19,7 +20,7 @@
 
     <header></header>
 
-    <nav class="navbar" id="navbar"></nav>
+    <nav class="navbar navbar-expand-lg bg-light navbar-light" id="navbar"></nav>
     <article class="container">
         <h1>
             Divide by zero
@@ -28,7 +29,7 @@
             by Claudio Surmon
         </p>
         <figure>
-            <img src="../images/TI86_Calculator_DivByZero.jpg" alt="PlaceHolder">
+            <img src="images/TI86_Calculator_DivByZero.jpg" alt="PlaceHolder">
             <figcaption>
                 TI86 displaying the divide by zero error, Public domain, Credit: Torindkflt
             </figcaption>
