--- a/blogs/blog5.html
+++ b/blogs/blog5.html
@@ -2,7 +2,9 @@
 <html id="top">
 
 <head>
-    <link href="../css/stylesheet.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
+        integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+    <link href="/WSOA3028A_1830290/css/bootstrapStylesheet.css" rel="stylesheet">
     <script src="../js/nav.js"></script>
     <meta charset="UTF-8">
     <meta name="desciption" content="Blog about Alternative Communication Ideas">
@@ -17,7 +19,7 @@
 
     <header></header>
     <nav class="navbar" id="navbar"></nav>
-    <article>
+    <article class="container">
 
         <h1>
             Alternative Communication Ideas - Speculation
@@ -133,8 +135,17 @@
 
         </p>
     </article>
-    <nav class="blogNav"></nav>
-    <footer></footer>
+    <nav class="blogNav container"></nav>
+    <footer class="container"></footer>
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+        integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
+        integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+        crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+        integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
