--- a/blogs/index.html
+++ b/blogs/index.html
@@ -2,10 +2,12 @@
 <html lang="en">
 
 <head>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
+        integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link href="../css/stylesheet.css" rel="stylesheet">
+    <link href="/WSOA3028A_1830290/css/bootstrapStylesheet.css" rel="stylesheet">
     <script src="../js/nav.js"></script>
 
     <meta name="desciption" content="Blog index page">
@@ -22,21 +24,36 @@
 
     <nav class="navbar" id="navbar"></nav>
 
-    <main>
+    <main class="container">
         <h1>
             Blog Index
         </h1>
-        <div class="navContainer">
-            <button id="prevButton" onclick="previousPage()"> &#8249</button>
-            <div class="gridContainer">
+        <div class="row">
+            <div class="col">
+                <button class="blogNavButton" id="prevButton" onclick="previousPage()"> &#8249</button>
             </div>
-            <button id="nextButton" onclick="nextPage()"> &#8250</button>
+            <div class="col-9">
+                <div class="gridContainer">
+                </div>
+            </div>
+            <div class="col">
+                <button class="blogNavButton" id="nextButton" onclick="nextPage()"> &#8250</button>
+            </div>
         </div>
         <p style="text-align: center !important;" class="BlogIndexNumber"></p>
     </main>
 
-    <footer></footer>
+    <footer class="container"></footer>
 
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+        integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
+        integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+        crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+        integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
