--- a/about/index.html
+++ b/about/index.html
@@ -44,7 +44,8 @@
         <p>
             Above, I have put an image of me, holding a Browning Machine gun shortly after joining the Italian armed
             forces (Forze Armate Italine) in which I served for 4 years in the infantry. I rose to the rank of Caporale
-            maggiore (platoon leader) during this time.
+            maggiore (platoon leader) during this time. I had been part of Operation Hooper as an external member of the
+            SADF between 1987 and 1988.
         </p>
         <p>
             I had discovered better prospects in the Southern African mercenary industry which gave me an opportunity to
@@ -69,6 +70,13 @@
             and I have recently began experimenting with web development. The result of this expansion is the website
             you're currently reading.
         </p>
+
+        <h2>
+            Map my life
+        </h2>
+        <iframe src="https://www.google.com/maps/d/u/0/embed?mid=1Lu7_9Bs4n7ytSkB87yrIPYAyAMm3IS-o" width="640"
+            height="480"></iframe>
+
     </main>
 
     <footer></footer>
