--- a/blogs/blog13.html
+++ b/blogs/blog13.html
@@ -34,6 +34,38 @@
             </figcaption>
         </figure>
         <p>
+            With the country’s move to lockdown level 2, Suzzi Ltd Inc. has decided to open its doors again. However due
+            to the nature of this level of lockdown we have had to change certain things around the workplace.
+            <br><br>
+            To facilitate social distancing we are not having all of our staff members return to the office. Those that
+            are going back are those who feel that they are not at as much risk (younger and have no former medical
+            conditions) as well as those who feel they are struggling to work at home.
+            <br><br>
+            However business will not be as usual, rotational hours will be implemented to minimise the amount of people
+            in the office at any one time, meetings will still be hosted online and all staff are expected to withhold
+            the highest santitation procedures.
+            <br><br>
+            To assist with the sanitation of the workplace, a more advanced cleaning crew has been hired to supplement
+            our current cleaning service. Thus we will make sure all surfaces will be sterilised.
+            <br><br>
+            With regards to our staff, we are willing to pay for tests for them and their families to assist those who
+            may not be able to afford it. However we will still maintain screening when the staff arrives at work.
+            <br><br>
+            During the period where no one was at the office we managed to contribute a large amount of processing power
+            to the Folding@home initiative. However, due to part of the company having to return back to work, we will
+            have to reclaim some of the PC’s. We will keep as many up and running as possible as such we should only
+            lose 20% of the processing power.
+            <br><br>
+            On a more personal note, I have been looking into a grocery run share app. This could allow for a community
+            to more readily help those in need of groceries without putting each other at risk. The app would basically
+            work by you requesting certain goods, and someone who happens to be goiung to a shop can accept your
+            request, then they could drive past your house and drop off the goods you needed before going home. However
+            more research will need to go into the feasibility of this app. But I should hurry up as relatively soon ill
+            be joining that excluisive elderly club myself.
+            <br><br>
+            To everyone else at home, from us at Suzzi we wish you safety for you and your loved ones.
+            <br><br>
+            The Suzzi Team.
 
         </p>
     </article>
