Fixed and pushed blog 13 and 14

--- a/blogs/blog13.html
+++ b/blogs/blog13.html
@@ -5,11 +5,11 @@
     <link href="../css/stylesheet.css" rel="stylesheet">
     <script src="../js/nav.js"></script>
     <meta charset="UTF-8">
-    <meta name="desciption" content="Template">
+    <meta name="desciption" content="Blog about the Suzzi Company">
     <meta name="author" content="Claudio Surmon">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>
-        Template
+        Suzzi Update 2
     </title>
 </head>
 
@@ -20,17 +20,15 @@
     <nav class="navbar" id="navbar"></nav>
     <article>
         <h1>
-            Template
+            Suzzi Update 2: Electric Boogaloo
         </h1>
         <p id="info">
-            by Claudio Surmon
+            by Giovanni Suzzi
         </p>
         <figure>
-            <img src="../images/PlaceHolder.png" alt="PlaceHolder">
+            <img src="../images/back-to-work.png" alt="A sign saying 'Back to Work'">
             <figcaption>
-                Vannevar Bush at a desk
-                </br>
-                From "OEM Defence" during World War 2, United States Treasury, public domain.
+                From Public Domain Vectors, public domain.
             </figcaption>
         </figure>
         <p>
