--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta name="desciption" content="Home page">
     <meta name="author" content="Claudio Surmon">
 
-    <title>Document</title>
+    <title>Suzzi LTD Inc - Official</title>
 </head>
 
 <body onload="insertElements(0)">
