--- a/blogs/blog15.html
+++ b/blogs/blog15.html
@@ -9,7 +9,7 @@
     <meta name="author" content="Claudio Surmon">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>
-        Template
+        Is more technology always the best solution?
     </title>
 </head>
 
@@ -20,7 +20,7 @@
     <nav class="navbar" id="navbar"></nav>
     <article>
         <h1>
-            Template
+            Is more technology always the best solution?
         </h1>
         <p id="info">
             by Claudio Surmon
@@ -34,6 +34,42 @@
             </figcaption>
         </figure>
         <p>
+            When the sun is too bright, you will (probably) not launch a massive sunshade into space so that its less
+            bright, you’d create sunglasses. Not every problem requires an overboard solution, but where is that
+            dividing line? At what point is a solution overly engineered?
+            <br><br>
+            Let’s use a less ridiculous example, soap dispensers. You get two types of soap dispensers, “manual” and
+            “automatic”. Although manual dispensers are genereally cheaper and easier to use, they can cause
+            cross-contamination, hence the urge to move towards automatic units. Depending on the technology used within
+            the unit various issues can arise, some unexpected. A few years ago a video went viral of a soap dispenser
+            that would dispense soap for those that had lighter skin while not for those with darker skin. This was due
+            to the usage of near-infared sensors and lights which respond differently to darker objects (namely skin).
+            Poor planning and testing caused this product to come to market, however there are two ways forward from
+            this issue, either more expensive and complicated detection methods could be employed (like ultrasonic range
+            detectors) or move back to the simpler solution of manual dispensers. Where do we draw the line and say that
+            more technology is bad?
+            <br><br>
+            On a related note, traffic lights. In recent decades, with LED technologies getting cheaper and more
+            widespread, traffic lights across the USA were replaced with LED fixtures due to the mirade of benefits they
+            provided. From using a tenth the energy to lasting far longer and providing feasible options for battery
+            backups. However there was an issue, due to LED bulbs not wasting a lot of their energy as heat, the units
+            would not stay warm. This meant during snowstorms ice and snow could build up on the surface of the bulb.
+            Thus meaning that people would have accidents in these conditions. This caused outrage, with people claiming
+            that this problem negated all the benefits that the LEDs brought to the table because of the “but
+            sometimes”. In this situation, it is arguable that innovating on top of the LED technology (by including a
+            heating element to heat the lens if it gets too cold) is a far better solution than to revert back to
+            incandescent bulbs. However solutions aren’t always as clear cut and when lives are stake (directly or
+            indirectly) more caution should be taken.
+            <br><br>
+            With the examples shown above, the usage of technology to “improve” peoples lives can be argued either way.
+            However, companies and manufactures should be more responsible with the technology they create. There are
+            many starry-eyed entrepreneurs with ideas they believe will make the world a better place, without realising
+            the harm they may do due to their ignorance. This ignorance can manifest itself in many different situations
+            and having the discipline and awareness to prevent these issues. Before we create products that help
+            perpetuate long standing issues and/or biases.
+            <br><br>
+            Theres a time and place for optimisation, trying to find when its time to take a step back from these
+            solutions and try find a more elegant solution is key.
 
         </p>
     </article>
