--- a/about/index.html
+++ b/about/index.html
@@ -74,8 +74,8 @@
         <h2>
             Map my life
         </h2>
-        <iframe src="https://www.google.com/maps/d/u/0/embed?mid=1Lu7_9Bs4n7ytSkB87yrIPYAyAMm3IS-o" width="640"
-            height="480"></iframe>
+        <iframe src="https://www.google.com/maps/d/u/0/embed?mid=1Lu7_9Bs4n7ytSkB87yrIPYAyAMm3IS-o" width="100%"
+            height="480px"></iframe>
 
     </main>
 
