--- a/blogs/blog13.html
+++ b/blogs/blog13.html
@@ -50,16 +50,16 @@
             may not be able to afford it. However we will still maintain screening when the staff arrives at work.
             <br><br>
             During the period where no one was at the office we managed to contribute a large amount of processing power
-            to the Folding@home initiative. However, due to part of the company having to return back to work, we will
+            to the Folding@home initiative. However, due to part of the company having to return to work, we will
             have to reclaim some of the PC’s. We will keep as many up and running as possible as such we should only
             lose 20% of the processing power.
             <br><br>
             On a more personal note, I have been looking into a grocery run share app. This could allow for a community
             to more readily help those in need of groceries without putting each other at risk. The app would basically
-            work by you requesting certain goods, and someone who happens to be goiung to a shop can accept your
+            work by you requesting certain goods, and someone who happens to be going to a shop can accept your
             request, then they could drive past your house and drop off the goods you needed before going home. However
-            more research will need to go into the feasibility of this app. But I should hurry up as relatively soon ill
-            be joining that excluisive elderly club myself.
+            more research will need to go into the feasibility of this app. The app is aimed mostly at health workers
+            and the elderly but I need to hurry up and make it because pretty soon I'll be part of the elderly club.
             <br><br>
             To everyone else at home, from us at Suzzi we wish you safety for you and your loved ones.
             <br><br>
