--- a/blogs/blog15.html
+++ b/blogs/blog15.html
@@ -65,8 +65,9 @@
             However, companies and manufactures should be more responsible with the technology they create. There are
             many starry-eyed entrepreneurs with ideas they believe will make the world a better place, without realising
             the harm they may do due to their ignorance. This ignorance can manifest itself in many different situations
-            and having the discipline and awareness to prevent these issues. Before we create products that help
-            perpetuate long standing issues and/or biases.
+            and stages of production. The research phase, marketing phase or testing phase could all attribute to
+            errors. Having the discipline and awareness to prevent these issues before we create products that help
+            perpetuate long standing issues and/or biases is key.
             <br><br>
             Theres a time and place for optimisation, trying to find when its time to take a step back from these
             solutions and try find a more elegant solution is key.
