--- a/blogs/blog14.html
+++ b/blogs/blog14.html
@@ -46,10 +46,11 @@
             to your account. This I did not feel comfortable doing, and as such decided to go with the less impressive
             route of embedding the map in my ‘About’ page.
             <br><br>
-            Now the choice to go with a Maps API at all instead of just using images and a list. That is mainly driven
-            by interactivity. Because I can scribble all over a static image, but its not interactable, a user cannot
+            The choice to go with a Maps API at all,instead of justing using images and a list, is mainly driven by
+            interactivity
+            I can scribble all over a static image, but its not interactive. A user cannot
             zoom in and pan about and see whats nearby that’s relevant to them. The points of interest are also not a
-            constant distance apart, where some are roughly 2km apart, and others 12000km apart, meaning zooming and
+            constant distance apart, where some are roughly 2km apart, and others 12000km apart.Thus zooming and
             panning is a necessity.
             <br><br>
             In my family it is a rare occurance for all 3 of us to be in a photo together (as someone has to hold the
