--- a/blogs/blog14.html
+++ b/blogs/blog14.html
@@ -38,6 +38,13 @@
             my childhood, early life, military adventures as well as my later life. So I thought the best way to achieve
             this would be through the usage of the Google Maps API.
             <br><br>
+            Regarding the options, the main ones I had looked at was "Google Maps", "Open layers", and "HERE". Although
+            "Open layers" is free, it lacked the features I wanted for the mapping of my life, only providing markers,
+            thus ruling it out. I then looked at "HERE" and "Google Maps", both have paid services at a certain point.
+            However Google maps provided an easy to use online map creator for embedding which made it win for me. It
+            took less time and effort to create the map required, combined with the fact that Google Maps is used by
+            more people.
+            <br><br>
             The original plan was to use the KML/KMZ file format to store all the points I wanted to portray on the map,
             and then utilising the google maps API I would generate the map at runtime using javascript. However, this
             was unfeasible to do as a service I had initially interpreted as free had various conditions. The usage of
