--- a/blogs/blog15.html
+++ b/blogs/blog15.html
@@ -26,11 +26,19 @@
             by Claudio Surmon
         </p>
         <figure>
-            <img src="../images/PlaceHolder.png" alt="PlaceHolder">
+            <img src="../images/hammer-and-nails.jpg" alt="PlaceHolder">
             <figcaption>
-                Vannevar Bush at a desk
+                A hammer and a set of nails
                 </br>
-                From "OEM Defence" during World War 2, United States Treasury, public domain.
+                From Flickr.com, licensed under Creative Commons 2.0.
+                <a
+                    href="http://foto.wuestenigel.com/?utm_source=24216243048&utm_campaign=FlickrDescription&utm_medium=link">
+                    Original
+                </a>
+                &
+                <a href="https://creativecommons.org/licenses/by/2.0/">
+                    License
+                </a>
             </figcaption>
         </figure>
         <p>
