One of the final tweaks

--- a/construction/index.html
+++ b/construction/index.html
@@ -122,12 +122,19 @@
             redesigned the interface such that the page now automatically rescales accordingly. The blog index now
             scales accordingly to the relative width of the device it is being viewed on.
         </p>
-        <img src=../images/IMG_20200603_0001.jpg alt="Logo">
+        <img src=../images/IMG_20200603_0001.jpg alt="Wireframe">
         <h3>
             Blog dropdown
         </h3>
         <p>
             To ease navigation to the latest blog posts, a dropdown menu was created to show the 6 latest blogposts.
+        </p>
+        <h3>
+            External Dependancy
+        </h3>
+        <p>
+            I chose to use the Google Maps API within my website as an embedded map. the reasons are explained <a
+                href="../blogs/blog14.html">here</a>
         </p>
 
     </main>
