--- a/services/index.html
+++ b/services/index.html
@@ -21,18 +21,25 @@
 
     <main>
         <h1>Services Offered</h1>
+        <h3>Problem Identification Services</h3>
+        <p>
 
-        <ul>
-            <li style="text-align: center;">
-                <p>Problem Identification Services</p>
-            </li>
-            <li style="text-align: center;">
-                <p>Platform Identification Services</p>
-            </li>
-            <li style="text-align: center;">
-                <p>Integrated Solution Creation Services</p>
-            </li>
-        </ul>
+            If you're having a problem in your business and you think technology is the solution we'd be happy to
+            identify you're problem for you and suggest a few solutions.
+        </p>
+
+        <h3>Platform Identification Services</h3>
+        <p>
+            For those wishing to expand their business into new sectors or upgrade their current workflow, we
+            can offer and integrate new platforms that would suit your business and/or workflow.
+        </p>
+
+        <h3>Integrated Solution Creation Services</h3>
+        <p>
+            For those who require more custom solutions, we offer custom software creation solutions that would
+            be perfect for your business's needs and be customised to your liking.
+        </p>
+
 
         <p>
             To schedule a consultation meeting please see our <a href="/WSOA3028A_1830290/contact/index.html">Contact
